<resources>
    <string name="app_name">Weather Detector</string>
    <string name="temp_title">Temperature</string>
    <string name="air_press_title">Air Pressure</string>
    <string name="humidity_title">Humidity</string>
    <string name="air_quality_title">Air Quality</string>
    <string name="hum_read_str">Humidity Reader</string>
    <string name="air_press_str">Air Pressure Reader</string>
    <string name="temp_str">Temperature Reader</string>
    <string name="reading_graph">Reading Graph</string>
    <string name="reading_text">Reading</string>
    <string name="temp_value">Temp</string>
    <string name="air_press_value">AP</string>
    <string name="hum_value">rH%</string>
    <string name="air_quality_value">AQ</string>
    <string name="atmospheric_reading_title">Atmospheric Readings</string>
</resources>